@@ -4,13 +4,17 @@ endif
 ifndef SCRAM_ADMIN_DIR
 SCRAM_ADMIN_DIR:= .SCRAM/$(SCRAM_ARCH)
 endif
+ifndef SCRAM_SCRIPT_EXT
+SCRAM_SCRIPT_EXT:=$(SCRAM_ADMIN_DIR)/$(if $(strip $(filter V2_%,$(SCRAM_VERSION))),.pl,.py)
+endif
 ifndef SCRAM_TOOLS_DIR
 SCRAM_TOOLS_DIR:=$(SCRAM_ADMIN_DIR)/$(if $(strip $(filter V2_%,$(SCRAM_VERSION))),timestamps,tools)
 endif
-EXTERNAL_LINK_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/linkexternal
-TOOL_MAKE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/updateToolMK
-FIND_DEPS_TREE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/find-deps-tree
-PROJECT_AREA_RENAME_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/projectAreaRename
+EXTERNAL_LINK_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/linkexternal$(SCRAM_SCRIPT_EXT)
+TOOL_MAKE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/updateToolMK$(SCRAM_SCRIPT_EXT)
+FIND_DEPS_TREE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/find-deps-tree$(SCRAM_SCRIPT_EXT)
+PROJECT_AREA_RENAME_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/projectAreaRename$(SCRAM_SCRIPT_EXT)
+PROJECT_INFO_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/projectInfo$(SCRAM_SCRIPT_EXT)
 
 SCRAM_MAKEFILE := $(firstword $(MAKEFILE_LIST))
 ToolTimeStamps := $(wildcard $(SCRAM_TOOLS_DIR)/*)
